# wincontext

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  app_options.h  app_types.h  build.bat  build_debug.bat  build_release.bat  jg_args.h  jg_benchmark.h  jg_ostream_color_scope.h  jg_string.h  jg_test.h  main.cpp  test.cpp  test_string_split.h  userdata.cpp  userdata.h  win32_error.h  win32_userdata.cpp  win32api.cpp  win32api.h  win32userdata.cpp  win32userdata.h
src/: app_types.h  main.cpp  test.cpp  test_string_split.h  win32_api.cpp  win32_api.h  win32_error.h  win32_userdata.cpp  win32_userdata.h
